--- a/SmartSchool.WebAPI/appsettings.Development.json
+++ b/SmartSchool.WebAPI/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings":{
-    "Default": "Data Source=SmartSchool.db"
+    "Default": "Data Source=SmartSchool.db",
+    "MySqlConnection" : "Server=172.22.0.2;Port=3306;Database=SmartSchoolDB;User=root;Password=112233"
   },
   "Logging": {
     "LogLevel": {
